フォームの部品にidをつけ忘れていたので修正

--- a/index.html
+++ b/index.html
@@ -59,19 +59,19 @@
     <form action="" method="post">
       <div>
         <label for="company">会社名</label>
-        <input type="text" name="company" />
+        <input type="text" name="company" id="company" />
       </div>
       <div>
         <label for="name">お名前</label>
-        <input type="text" name="name" />
+        <input type="text" name="name" id="name" />
       </div>
       <div>
         <label for="email">メールアドレス</label>
-        <input type="text" name="email" />
+        <input type="text" name="email" id="email" />
       </div>
       <div>
         <label for="content">お問い合わせ内容</label>
-        <textarea name="content" cols="80" rows="8"></textarea>
+        <textarea name="content" id="content" cols="80" rows="8"></textarea>
       </div>
       <div>
         <input type="submit" value="お申し込み" />
