--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       </div>
       <div>
         <label for="email">メールアドレス</label>
-        <input type="text" name="email" id="email" />
+        <input type="email" name="email" id="email" />
       </div>
       <div>
         <label for="content">お問い合わせ内容</label>
